# cookiecutter-pyproject

./: README.md  cookiecutter.json
python/{{cookiecutter.project}}/: Makefile
{{cookiecutter.project_name}}/: Makefile  pyproject.toml
{{cookiecutter.project}}/: LICENSE  pyproject.toml
